# OpenGL-Project

./: .gitignore  CMakeLists.txt  OGPConfig.h  OGPConfig.h.in  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
